docs_exported/1.20.5/crafttweaker/docs/vanilla/api/BracketValidators.md
# BracketValidators

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.BracketValidators;
```


## Static Methods

:::group{name=validateBannerPattern}

Return Type: boolean

```zenscript
BracketValidators.validateBannerPattern(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateBlockBracket}

Return Type: boolean

```zenscript
BracketValidators.validateBlockBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateBlockStateMaterialBracket}

Return Type: boolean

```zenscript
BracketValidators.validateBlockStateMaterialBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateComponentType}

Return Type: boolean

```zenscript
BracketValidators.validateComponentType(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateEffectBracket}

Return Type: boolean

```zenscript
BracketValidators.validateEffectBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateEnchantment}

Return Type: boolean

```zenscript
BracketValidators.validateEnchantment(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateEntityType}

Return Type: boolean

```zenscript
BracketValidators.validateEntityType(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateInstrument}

Return Type: boolean

```zenscript
BracketValidators.validateInstrument(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateItemBracket}

Return Type: boolean

```zenscript
BracketValidators.validateItemBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateProfessionBracket}

Return Type: boolean

```zenscript
BracketValidators.validateProfessionBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateResourceBracket}

Return Type: boolean

```zenscript
BracketValidators.validateResourceBracket(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateSoundEvent}

Return Type: boolean

```zenscript
BracketValidators.validateSoundEvent(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateTargetingStrategy}

Return Type: boolean

```zenscript
BracketValidators.validateTargetingStrategy(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateTrimMaterial}

Return Type: boolean

```zenscript
BracketValidators.validateTrimMaterial(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

:::group{name=validateTrimPattern}

Return Type: boolean

```zenscript
BracketValidators.validateTrimPattern(tokens as string) as boolean
```

| Parameter |  Type  |
|-----------|--------|
| tokens    | string |


:::

